Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-26786

Compilation of indexedcontainerproxyconstiterator fails on Windows (command line length)

XMLWordPrintable

    • Windows
    • e7e593b2f (13.0)

      The attempt to build Qt Creator with tests on Windows with CMake fails (I believe) due to the exceeded command line length when building indexedcontainerproxyconstiterator.

      C:\PROGRA~2\MICROS~1\2019\COMMUN~1\VC\Tools\MSVC\1429~1.301\bin\HostX64\x64\cl.exe  /nologo /TP -DQT_CONCURRENT_LIB -DQT_CORE5COMPAT_LIB -DQT_CORE_LIB -DQT_CREATOR -DQT_DISABLE_DEPRECATED_BEFORE=0x050900 -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_NO_JAVA_STYLE_ITERATORS -DQT_TESTCASE_BUILDDIR=\"C:/Users/alportal/dev/build-qt-creator-qt6-Desktop_Qt_6_2_2_MSVC2019_64bit-Debug/tests/auto/utils/indexedcontainerproxyconstiterator\" -DQT_TESTCASE_SOURCEDIR=\"C:/Users/alportal/dev/qt-creator-qt6/tests/auto/utils/indexedcontainerproxyconstiterator\" -DQT_TESTLIB_LIB -DQT_USE_QSTRINGBUILDER -DQT_WIDGETS_LIB -DRELATIVE_DATA_PATH=\"../share/qtcreator\" -DRELATIVE_DOC_PATH=\"../share/doc/qtcreator\" -DRELATIVE_LIBEXEC_PATH=\"\" -DRELATIVE_PLUGIN_PATH=\"../lib/qtcreator/plugins\" -DSRCDIR=\"C:/Users/alportal/dev/qt-creator-qt6/tests/auto/utils/indexedcontainerproxyconstiterator\" -DUNICODE -DWIN32 -DWIN64 -D_CRT_SECURE_NO_WARNINGS -D_ENABLE_EXTENDED_ALIGNED_STORAGE -D_SCL_SECURE_NO_WARNINGS -D_UNICODE -D_WIN64 -IC:\Users\alportal\dev\build-qt-creator-qt6-Desktop_Qt_6_2_2_MSVC2019_64bit-Debug\tests\auto\utils\indexedcontainerproxyconstiterator -IC:\Users\alportal\dev\qt-creator-qt6\tests\auto\utils\indexedcontainerproxyconstiterator -IC:\Users\alportal\dev\build-qt-creator-qt6-Desktop_Qt_6_2_2_MSVC2019_64bit-Debug\tests\auto\utils\indexedcontainerproxyconstiterator\tst_utils_indexedcontainerproxyconstiterator_autogen\include -IC:\Users\alportal\dev\build-qt-creator-qt6-Desktop_Qt_6_2_2_MSVC2019_64bit-Debug\src -IC:\Users\alportal\dev\qt-creator-qt6\src\libs -external:I C:\Qt\6.2.2\msvc2019_64\include\QtConcurrent -external:I C:\Qt\6.2.2\msvc2019_64\include -external:I C:\Qt\6.2.2\msvc2019_64\include\QtCore -external:I C:\Qt\6.2.2\msvc2019_64\mkspecs\win32-msvc -external:I C:\Qt\6.2.2\msvc2019_64\include\QtNetwork -external:I C:\Qt\6.2.2\msvc2019_64\include\QtGui -external:I C:\Qt\6.2.2\msvc2019_64\include\QtWidgets -external:I C:\Qt\6.2.2\msvc2019_64\include\QtCore5Compat -external:I C:\Qt\6.2.2\msvc2019_64\include\QtTest -external:W0 /DWIN32 /D_WINDOWS /W3 /GR /EHsc /MDd /Zi /Ob0 /Od /RTC1 -Zc:__cplusplus -permissive- -utf-8 -std:c++17 /showIncludes /Fotests\auto\utils\indexedcontainerproxyconstiterator\CMakeFiles\tst_utils_indexedcontainerproxyconstiterator.dir\tst_utils_indexedcontainerproxyconstiterator_autogen\mocs_compilation.cpp.obj /Fdtests\auto\utils\indexedcontainerproxyconstiterator\CMakeFiles\tst_utils_indexedcontainerproxyconstiterator.dir\ /FS -c C:\Users\alportal\dev\build-qt-creator-qt6-Desktop_Qt_6_2_2_MSVC2019_64bit-Debug\tests\auto\utils\indexedcontainerproxyconstiterator\tst_utils_indexedcontainerproxyconstiterator_autogen\mocs_compilation.cpp
      mocs_compilation.cpp
      C:\Users\alportal\dev\build-qt-creator-qt6-Desktop_Qt_6_2_2_MSVC2019_64bit-Debug\tests\auto\utils\indexedcontainerproxyconstiterator\tst_utils_indexedcontainerproxyconstiterator_autogen\mocs_compilation.cpp: fatal error C1041: cannot open program database 'C:\Users\alportal\tests\auto\utils\indexedcontainerproxyconstiterator\CMakeFiles\tst_utils_indexedcontainerproxyconstiterator.dir\vc140.pdb'; if multiple CL.EXE write to the same .PDB file, please use /FS
      
      C:\Users\alportal\dev\build-qt-creator-qt6-Desktop_Qt_6_2_2_MSVC2019_64bit-Debug\tests\auto\utils\indexedcontainerproxyconstiterator\tst_utils_indexedcontainerproxyconstiterator_autogen\mocs_compilation.cpp : fatal error C1083: Cannot open compiler generated file: '': Invalid argument
      

        1. clang-long-path.png
          46 kB
          Cristian Adam
        2. cl-long-path.png
          49 kB
          Cristian Adam
        3. cmd-long-path.png
          44 kB
          Cristian Adam
        4. gcc-long-path.png
          42 kB
          Cristian Adam
        5. ninja-with-long-filename-support.zip
          285 kB
          Cristian Adam
        For Gerrit Dashboard: QTCREATORBUG-26786
        # Subject Branch Project Status CR V

            cadam Cristian Adam
            portale Alessandro Portale
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes